--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
       <h1> DevMountain Chat Room </h1>
       <form ng-submit="postData(message)">
         <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
+		<input class="form-control text-box" type="text" ng-model="filterMessages" placeholder="Filter Messages">
+		  <h4>Sort By:</h4><select ng-model="sortByDate" ng-options="option.value as option.display for option in sortOptions">
+		  	
+		  </select>
       </form>
       <div class="messages-container">
-        <p ng-repeat="message in messages"> {{message.text}} </p>
+		  <p ng-repeat="message in messages | filter: filterMessages | orderBy: 'createdAt': sortByDate"> {{message.text}} : {{message.createdAt | date: 'short'}}</p>
       </div>
     </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
